# chemfiles.js

./: .eslintrc.yml  .gitignore  .prettierignore  .travis.yml  CMakeLists.txt  README.md  exported.cmake  index.html  karma.conf.ts  package-lock.json  package.json  tsconfig-build.json  tsconfig.json  tslint.json  typedoc.json  webpack.config.ts
.github/workflows/: docs.yml  tests.yml
latest/: index.html
latest/assets/: highlight.css  search.js  style.css
latest/assets/css/: main.css
latest/assets/js/: search.js
latest/classes/: Atom.html  Frame.html  MemoryReader.html  MemoryWriter.html  Residue.html  Selection.html  Topology.html  Trajectory.html  UnitCell.html
latest/enums/: BondOrder.html  CellShape.html
latest/functions/: addConfiguration.html  clearErrors.html  formatsList.html  guessFormat.html  lastError.html  ready.html  setWarningCallback.html  version.html
latest/interfaces/: Array3D.html  FormatMetadata.html  Matrix3.html  Vector3D.html
latest/types/: PropertyType.html  WarningCallback.html
latest/variables/: FS.html
lib/: libchemfiles.js  libchemfiles.wasm  wasm-sizes.ts
scripts/: add-docs-css.ts  build-libchemfiles.ts  check-used-functions.py  generate-cmake-export.py  lint.ts
src/: atom.ts  browser.ts  c_ptr.ts  cell.ts  frame.ts  index.ts  misc.ts  property.ts  residue.ts  selection.ts  stack.ts  topology.ts  trajectory.ts  utils.ts
src/cpp/: main.cpp
src/libchemfiles/: cdecl.d.ts  cdecl.js  emscripten.d.ts  exported.cmake  index.d.ts  index.js  index.ts  main.cpp  sizeof.cpp
tests/: atom.ts  browser.ts  cell.ts  doc.ts  frame.ts  misc.ts  residue.ts  selection.ts  topology.ts  trajectory.ts  utils.ts
tests/data/: index.ts  test-config.toml
